--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2467,8 +2467,8 @@
 		background-attachment: scroll,								fixed;
 		background-image: url("images/overlay.png"), url("../../images/bg.jpg");
 		background-position: top left,							top left;
-		background-repeat: repeat,								no-repeat;
-		background-size: auto,								auto 100%;
+		background-repeat: repeat;
+		background-size: 100%, 100%;
 		color: rgba(255, 255, 255, 0.5);
 		height: 100%;
 		left: 0;
